# capstone

./: .gitignore  .swp  CMakeLists.txt  Custom.cmake  README.md  client_config.py  env.yml  index.py  index.temp.py  keypack.pyu  lala.ipynb  linux_environment.yml  requirements-dev.txt  requirements.txt  setup.py  tree.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request-based-on-problems.md  feature_request.md
_temp/: coun.py
assets/: HISS.pod  config.json
docs/: build.md  features.md
posture_fit_algorithm/: Crunch.py  Detector2.py  Gem.py  Pushup.py  Situp.py  Squads.py  Squats.py  detector.py
posture_fit_development/: .Updater.c.swp  Angle.py  AppGui.py  Counter.py  Logger.py  OsChecker.py  Pushup.py  Situp.py  Sound.py  Squads.py  Startup.py  Stopwatch.py  Updater.c  Webcam.py  au  coun.py  index.py  lala.ipynb  pr.py
posture_fit_development/updater/: Updater_old.c
src/: lala.ipynb
test/: test.js  test_sound.py
test/auto_updater/: AU  index.py  test.c  test_exe_path.py
test/poc/: test_class_a.py  test_class_e.py  test_class_gs.py  test_class_i.py  test_class_p.py
